# respeaker_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
cfg/: Respeaker.cfg
launch/: respeaker.launch
scripts/: respeaker_gencfg.py  respeaker_node.py  speech_to_text.py
src/respeaker_ros/: __init__.py  audio.py  interface.py  node.py  parameters.py  util.py
test/: test_installed.py
