<?xml version="1.0"?>
<package format="3">
  <name>respeaker_ros</name>
  <version>0.0.0</version>
  <description>The respeaker_ros package</description>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>Apache</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">catkin_virtualenv</depend>
  <depend>angles</depend>
  <depend>audio_common_msgs</depend>
  <depend>audio_play</depend>
  <depend>sound_play</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>portaudio19-dev</depend>
  <depend>python-pyaudio</depend>
  <depend>speech_recognition_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
